[package]
name = "rust-python"
version = "0.0.1"
edition = "2021"

[lib]
name = "rust_pythona"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.12.3", features =  ["extension-module"]}

# it could write it as follows
#[dependencies.pyo3]
#version = "0.12.3"
#features = ["extension-module"]


